5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4370/executions/1884_1639.log
== TEST (2019-07-04 18:30:18) 
-- CODE:
from numpy import *
tu= array(input(eval("digite o valor das turmas")))
j=0
for in range(size(tu)):
	if(tu[i]%2==0):
		j=j+1
print(j)
v=zeros(j,dtype=int)
g=0
b=0
for in range (size(tu)):
	if(tu[i]%2==0):
		v[g]=v[g]+b
		g=g+1
	b=b+1
print(v)


-- ERROR:
File "XXXX", line 4
    for in range(size(tu)):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:31:00) 
-- CODE:
from numpy import *
t= array(input(eval("digite o valor das turmas")))
j=0
for in range(size(t)):
	if(t[i]%2==0):
		j=j+1
print(j)
v=zeros(j,dtype=int)
g=0
b=0
for in range (size(tu)):
	if(tu[i]%2==0):
		v[g]=v[g]+b
		g=g+1
	b=b+1
print(v)


-- ERROR:
File "XXXX", line 4
    for in range(size(t)):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:31:03) 
-- CODE:
from numpy import *
t= array(input(eval("digite o valor das turmas")))
j=0
for in range(size(t)):
	if(t[i]%2==0):
		j=j+1
print(j)
v=zeros(j,dtype=int)
g=0
b=0
for in range (size(tu)):
	if(tu[i]%2==0):
		v[g]=v[g]+b
		g=g+1
	b=b+1
print(v)


-- ERROR:
File "XXXX", line 4
    for in range(size(t)):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:31:04) 
-- CODE:
from numpy import *
t= array(input(eval("digite o valor das turmas")))
j=0
for in range(size(t)):
	if(t[i]%2==0):
		j=j+1
print(j)
v=zeros(j,dtype=int)
g=0
b=0
for in range (size(tu)):
	if(tu[i]%2==0):
		v[g]=v[g]+b
		g=g+1
	b=b+1
print(v)


-- ERROR:
File "XXXX", line 4
    for in range(size(t)):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:31:21) 
-- CODE:
from numpy import *
t= array(input(eval("digite o valor das turmas")))
j=0
for i in range(size(t)):
	if(t[i]%2==0):
		j=j+1
print(j)
v=zeros(j,dtype=int)
g=0
b=0
for in range (size(tu)):
	if(tu[i]%2==0):
		v[g]=v[g]+b
		g=g+1
	b=b+1
print(v)


-- ERROR:
File "XXXX", line 11
    for in range (size(tu)):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:32:09) 
-- CODE:
from numpy import *
t= array(input(eval("digite o valor das turmas")))
j=0
for i in range(size(t)):
	if(t[i]%2==0):
		j=j+1
print(j)
v=zeros(j,dtype=int)
g=0
b=0
for in range (size(tu)):
	if(tu[i]%2==0):
		v[g]=v[g]+b
		g=g+1
	b=b+1
print(v)


-- ERROR:
File "XXXX", line 11
    for in range (size(tu)):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:32:16) 
-- CODE:
from numpy import *
t= array(input(eval("digite o valor das turmas")))
j=0
for i in range(size(t)):
	if(t[i]%2==0):
		j=j+1
print(j)
v=zeros(j,dtype=int)
g=0
b=0
for in range (size(tu)):
	if(tu[i]%2==0):
		v[g]=v[g]+b
		g=g+1
	b=b+1
print(v)


-- ERROR:
File "XXXX", line 11
    for in range (size(tu)):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:32:36) 
-- CODE:
from numpy import *
t= array(input(eval("digite o valor das turmas")))
j=0
for i in range(size(t)):
	if(t[i]%2==0):
		j=j+1
print(j)
v=zeros(j,dtype=int)
g=0
b=0
for in range (size(t)):
	if(t[i]%2==0):
		v[g]=v[g]+b
		g=g+1
	b=b+1
print(v)


-- ERROR:
File "XXXX", line 11
    for in range (size(t)):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:32:37) 
-- CODE:
from numpy import *
t= array(input(eval("digite o valor das turmas")))
j=0
for i in range(size(t)):
	if(t[i]%2==0):
		j=j+1
print(j)
v=zeros(j,dtype=int)
g=0
b=0
for in range (size(t)):
	if(t[i]%2==0):
		v[g]=v[g]+b
		g=g+1
	b=b+1
print(v)


-- ERROR:
File "XXXX", line 11
    for in range (size(t)):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:32:38) 
-- CODE:
from numpy import *
t= array(input(eval("digite o valor das turmas")))
j=0
for i in range(size(t)):
	if(t[i]%2==0):
		j=j+1
print(j)
v=zeros(j,dtype=int)
g=0
b=0
for in range (size(t)):
	if(t[i]%2==0):
		v[g]=v[g]+b
		g=g+1
	b=b+1
print(v)


-- ERROR:
File "XXXX", line 11
    for in range (size(t)):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:32:38) 
-- CODE:
from numpy import *
t= array(input(eval("digite o valor das turmas")))
j=0
for i in range(size(t)):
	if(t[i]%2==0):
		j=j+1
print(j)
v=zeros(j,dtype=int)
g=0
b=0
for in range (size(t)):
	if(t[i]%2==0):
		v[g]=v[g]+b
		g=g+1
	b=b+1
print(v)


-- ERROR:
File "XXXX", line 11
    for in range (size(t)):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:32:38) 
-- CODE:
from numpy import *
t= array(input(eval("digite o valor das turmas")))
j=0
for i in range(size(t)):
	if(t[i]%2==0):
		j=j+1
print(j)
v=zeros(j,dtype=int)
g=0
b=0
for in range (size(t)):
	if(t[i]%2==0):
		v[g]=v[g]+b
		g=g+1
	b=b+1
print(v)


-- ERROR:
File "XXXX", line 11
    for in range (size(t)):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 18:32:55) 
-- CODE:
from numpy import *
t= array(input(eval("digite o valor das turmas")))
j=0
for i in range(size(t)):
	if(t[i]%2==0):
		j=j+1
print(j)
v=zeros(j,dtype=int)
g=0
b=0
for in range (size(t)):
	if(t[i]%2==0):
		v[g]=v[g]+b
		g=g+1
	b=b+1
print(v)


-- EXECUTION TIME:
0.803494
-- ERROR:
  File "/home/codebench/codes/1884/1639/main.py", line 11
    for in range (size(t)):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:33:02) 
-- CODE:
from numpy import *
t= array(input(eval("digite o valor das turmas")))
j=0
for i in range(size(t)):
	if(t[i]%2==0):
		j=j+1
print(j)
v=zeros(j,dtype=int)
g=0
b=0
for in range (size(t)):
	if(t[i]%2==0):
		v[g]=v[g]+b
		g=g+1
	b=b+1
print(v)


-- ERROR:
File "XXXX", line 11
    for in range (size(t)):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:33:16) 
-- CODE:
from numpy import *
t= array(input(eval("digite o valor das turmas")))
j=0
for i in range(size(t)):
	if(t[i]%2==0):
		j=j+1
print(j)
v=zeros(j,dtype=int)
g=0
b=0
for i in range (size(t)):
	if(t[i]%2==0):
		v[g]=v[g]+b
		g=g+1
	b=b+1
print(v)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:34:00) 
-- CODE:
from numpy import *
t= array(eval(input("digite o valor das turmas")))
j=0
for i in range(size(t)):
	if(t[i]%2==0):
		j=j+1
print(j)
v=zeros(j,dtype=int)
g=0
b=0
for i in range (size(t)):
	if(t[i]%2==0):
		v[g]=v[g]+b
		g=g+1
	b=b+1
print(v)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 18:34:24) 
-- CODE:
from numpy import *
t= array(eval(input("digite o valor das turmas")))
j=0
for i in range(size(t)):
	if(t[i]%2==0):
		j=j+1
print(j)
v=zeros(j,dtype=int)
g=0
b=0
for i in range (size(t)):
	if(t[i]%2==0):
		v[g]=v[g]+b
		g=g+1
	b=b+1
print(v)


-- EXECUTION TIME:
1.191
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0 1 6 8 11 12]
---- user output:
6
[ 0  1  6  8 11 12]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 4 7 8]
---- user output:
5
[0 1 4 7 8]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
6
[0 1 4 6 7 8]
---- user output:
6
[0 1 4 6 7 8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
